<resources>
    <string name="app_name">Go gym</string>
    <string name="me_homepage_text">我的主页</string>

    <string name="me_exercise_unit">锻炼时间 / 分钟</string>

    <string name="me_record_uint">累计打卡 / 天</string>

    <string name="me_exit_text">退出登录</string>

    <string name="me_comment_text">我的评论</string>

    <string name="me_record_text">打卡记录</string>

    <string name="me_favor_text">我的收藏</string>

    <string name="me_record_number">0</string>

    <string name="me_app_version">V1.0</string>
    <string name="share_clicked">Post %d is shared</string>
</resources>
