<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"

    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Meactivity"
    android:orientation="vertical">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
       >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@id/me_homepage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="20dp">

                <ImageView
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:adjustViewBounds="true"
                    android:scaleType="centerCrop"
                    android:src="@drawable/jianshenfang"
                />

                <TextView
                    android:id="@id/me_homepage_username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:maxWidth="200dp"
                    android:text="@string/app_name"
                    android:textColor="@color/darkgray"
                    android:textSize="20sp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end|center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/me_homepage_text"
                        android:textColor="@color/lightgrey"
                        android:textSize="16sp" />

                    <ImageView
                        android:layout_width="14dp"
                        android:layout_height="14dp"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/location_marker" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingBottom="20dp"
                android:paddingTop="20dp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <TextView
                        android:id="@id/me_exercise_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="15dp"
                        android:text="@string/me_record_number"
                        android:textSize="40sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/me_exercise_unit"
                        android:textSize="14sp" />

                </LinearLayout>


                <TextView
                    android:layout_width="0.1dp"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="3dp"
                    android:layout_marginTop="3dp"
                    android:layout_weight="0"
                    android:background="@color/lightgray" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <TextView
                        android:id="@id/me_record_days"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="15dp"
                        android:text="@string/me_record_number"
                        android:textSize="40sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/me_record_uint"
                        android:textSize="14sp" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@color/white"
                android:orientation="vertical">


                <LinearLayout
                    android:id="@id/me_item_comment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingLeft="5dp"
                    android:paddingTop="5dp">

                    <ImageView
                        android:id="@+id/pinglun"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/pinglun" />

                    <LinearLayout

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:padding="10dp">



                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/me_comment_text"
                            android:textSize="14sp" />

                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_margin="5dp"
                            android:src="@drawable/pinglun" />
                    </LinearLayout>

                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0.2dp"
                    android:layout_marginLeft="50dp"
                    android:background="@color/lightgray" />

                <LinearLayout
                    android:id="@id/me_item_favor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingLeft="5dp"
                    android:paddingTop="5dp">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/shipin" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:padding="10dp">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/me_favor_text"
                            android:textSize="14sp" />

                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_margin="5dp"
                            android:src="@drawable/shipin" />

                    </LinearLayout>

                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0.2dp"
                    android:layout_marginLeft="50dp"
                    android:background="@color/lightgray" />

                <LinearLayout
                    android:id="@id/me_item_reord"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingLeft="5dp"
                    android:paddingTop="5dp">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/ditu" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:padding="10dp">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/me_record_text"
                            android:textSize="14sp" />

                        <ImageButton
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_margin="5dp"
                            android:src="@drawable/ditu" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
            <TextView
                android:id="@id/me_item_exit"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="15dp"
                android:background="@color/white"
                android:gravity="center"
                android:text="@string/me_exit_text"
                android:textColor="@color/red"
                android:textSize="14sp" />
        </LinearLayout>
    </ScrollView>
    <ImageButton
        android:id="@+id/main_button"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:src="@drawable/home"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/search_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_weight="1"
        android:background="@color/white"
        android:scaleType="centerInside"
        />

    <ImageButton
        android:id="@+id/search_button"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:src="@drawable/ditu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/main_button"
        app:layout_constraintRight_toLeftOf="@id/comment_button"
        app:layout_constraintHorizontal_weight="1"
        android:background="@color/white"
        android:scaleType="centerInside"
        />

    <ImageButton
        android:id="@+id/comment_button"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:src="@drawable/pinglun"
        app:layout_constraintLeft_toRightOf="@id/search_button"
        app:layout_constraintRight_toLeftOf="@id/home_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_weight="1"
        android:background="@color/white"
        android:scaleType="centerInside"
        />
    <ImageButton
        android:id="@+id/home_button"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:src="@drawable/people"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/comment_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_weight="1"
        android:background="@color/white"
        android:scaleType="centerInside"
        />

</androidx.constraintlayout.widget.ConstraintLayout>